--- a/css/materialize.css
+++ b/css/materialize.css
@@ -4064,9 +4064,10 @@ nav .button-collapse i {
 nav .brand-logo {
   position: absolute;
   color: #fff;
+  margin-left: 15px;
   display: inline-block;
   font-size: 2.1rem;
-  padding: 0;
+  padding: 0 30px 0 0;
   white-space: nowrap;
 }
 
