Change site style

--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ nav .brand-logo {
   font-family: "Lilita One", sans-serif;
   font-weight: 400;
   font-style: normal;
-  color: #1e1e1e !important;
+  color: #fff !important;
 }
 
 /*********************
